# curve_fit

./: .gitignore  CMakeLists.txt  README.md  fitted_traj.txt  requirements.txt
data/: _pixels.txt  _world.txt  data_pixels.txt  data_world.txt  test_camera.yml  test_pixels.txt  test_times.txt  test_world.txt
document/: cal.md
scripts/: clip_video.py  cut_frame.py  generate_data.py  visualize.py
src/: main.cpp
src/detect/: detect_test.py
src/solver/: trajectory_solver.h
